BUGFIX: removed unnecessary width:100% to fix horizontal scrolling and misaligned centering.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -96,7 +96,6 @@ input[type=text] {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
   height: 8rem;
   padding: 1rem;
   background: #CCC;
